--- a/BodyCareProducts/src/main/webapp/login.html
+++ b/BodyCareProducts/src/main/webapp/login.html
@@ -11,6 +11,13 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700%7CMartel:400,700" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -32,25 +39,26 @@
 
     <!-- Header Section Begin -->
 
-        <div class="container">
-            <div class="inner-header">
+        <div class="container-fluid" style="background-color: #2B394A;">
+            <div class="inner-header" style="padding: 15px;">
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
                             <a href="./index.html">
-                                <img src="img/logo.png" alt="">
+                                <!-- <img src="img/logo.png" alt=""> -->
                             </a>
                         </div>
                     </div>
+
                     <div class="col-lg-7 col-lg-7">
-                        <div class="advanced-search">
-                            <button type="button" class="category-btn">All Categories</button>
+                        <div class="advanced-search" style="border: none;">
                             <form action="#" class="input-group">
                                 <input type="text" placeholder="What do you need?">
                                 <button type="button"><i class="ti-search"></i></button>
                             </form>
                         </div>
                     </div>
+
                     <div class="col-lg-3 text-right col-lg-3">
                         <ul class="nav-right">
                             <li class="heart-icon"><a href="#">
@@ -58,59 +66,60 @@
                                     <span>1</span>
                                 </a>
                             </li>
+
                             <li class="cart-icon"><a href="#">
-                                    <i class="icon_bag_alt"></i>
-                                    <span>3</span>
-                                </a>
-                                <div class="cart-hover">
-                                    <div class="select-items">
-                                        <table>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="si-pic"><img src="img/select-product-1.jpg" alt=""></td>
-                                                    <td class="si-text">
-                                                        <div class="product-selected">
-                                                            <p>$60.00 x 1</p>
-                                                            <h6>Kabino Bedside Table</h6>
-                                                        </div>
-                                                    </td>
-                                                    <td class="si-close">
-                                                        <i class="ti-close"></i>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="si-pic"><img src="img/select-product-2.jpg" alt=""></td>
-                                                    <td class="si-text">
-                                                        <div class="product-selected">
-                                                            <p>$60.00 x 1</p>
-                                                            <h6>Kabino Bedside Table</h6>
-                                                        </div>
-                                                    </td>
-                                                    <td class="si-close">
-                                                        <i class="ti-close"></i>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <div class="select-total">
-                                        <span>total:</span>
-                                        <h5>$120.00</h5>
-                                    </div>
-                                    <div class="select-button">
-                                        <a href="#" class="primary-btn view-card">VIEW CARD</a>
-                                        <a href="#" class="primary-btn checkout-btn">CHECK OUT</a>
-                                    </div>
+                                <i class="icon_bag_alt"></i>
+                                <span>3</span>
+                            </a>
+                            <div class="cart-hover">
+                                <div class="select-items">
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <td class="si-pic"><img src="img/select-product-1.jpg" alt=""></td>
+                                                <td class="si-text">
+                                                    <div class="product-selected">
+                                                        <p>$60.00 x 1</p>
+                                                        <h6>Kabino Bedside Table</h6>
+                                                    </div>
+                                                </td>
+                                                <td class="si-close">
+                                                    <i class="ti-close"></i>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="si-pic"><img src="img/select-product-2.jpg" alt=""></td>
+                                                <td class="si-text">
+                                                    <div class="product-selected">
+                                                        <p>$60.00 x 1</p>
+                                                        <h6>Kabino Bedside Table</h6>
+                                                    </div>
+                                                </td>
+                                                <td class="si-close">
+                                                    <i class="ti-close"></i>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </li>
-                            <li class="cart-price">$150.00</li>
-                        </ul>
+                                <div class="select-total">
+                                    <span>total:</span>
+                                    <h5>$120.00</h5>
+                                </div>
+                                <div class="select-button">
+                                    <a href="#" class="primary-btn view-card">VIEW CARD</a>
+                                    <a href="#" class="primary-btn checkout-btn">CHECK OUT</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cart-price">$150.00</li>
+                    </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="nav-item">
-            <div class="container">
+        <div class="nav-item ">
+            <div class="container " >
                 <div class="nav-depart">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
@@ -155,11 +164,12 @@
                 <div id="mobile-menu-wrap"></div>
             </div>
         </div>
-    </header>
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <div class="breacrumb-section">
+    <div class="container-fluid pageBody " >
+    <!--<div class="breacrumb-section">
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -170,45 +180,49 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Breadcrumb Form Section Begin -->
 
     <!-- Register Section Begin -->
     <div class="register-login-section spad">
-        <div class="container">
+        <div class="container"  >
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
-                    <div class="login-form">
-                        <h2>Login</h2>
-                        <form action="#">
-                            <div class="group-input">
-                                <label for="username">Username or email address *</label>
-                                <input type="text" id="username">
-                            </div>
-                            <div class="group-input">
-                                <label for="pass">Password *</label>
-                                <input type="text" id="pass">
-                            </div>
-                            <div class="group-input gi-check">
-                                <div class="gi-more">
-                                    <label for="save-pass">
-                                        Save Password
-                                        <input type="checkbox" id="save-pass">
-                                        <span class="checkmark"></span>
-                                    </label>
-                                    <a href="#" class="forget-pass">Forget your Password</a>
+                    <div class="card px-3 py-3"
+                        style="color:white;width: 35rem;border-radius: 15px;background-color: #ffffffe0;">
+                        <div class="card-body">
+                            <div class="login-form">
+                                <h2>Login</h2>
+                                <form action="#">
+                                    <div class="group-input">
+                                        <label for="username">Username or email address *</label>
+                                        <input type="text" id="username" class="loginInputs">
+                                    </div>
+                                    <div class="group-input">
+                                        <label for="pass">Password *</label>
+                                        <input type="text" id="pass" class="loginInputs">
+                                    </div>
+                                    <div class="group-input gi-check">
+                                        <div class="gi-more">
+                                            <label for="save-pass">
+                                                Save Password
+                                                <input type="checkbox" id="save-pass">
+                                                <span class="checkmark"></span>
+                                            </label>
+                                            <a href="#" class="forget-pass">Forget your Password</a>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="site-btn login-btn">Sign In</button>
+                                </form>
+                                <div class="switch-login">
+                                    <a href="./register.html" class="or-login">Or Create An Account</a>
                                 </div>
-                            </div>
-                            <button type="submit" class="site-btn login-btn">Sign In</button>
-                        </form>
-                        <div class="switch-login">
-                            <a href="./register.html" class="or-login">Or Create An Account</a>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+        </div>
     <!-- Register Form Section End -->
 
     <!-- Partner Logo Section Begin -->
@@ -307,7 +321,10 @@
                     <div class="col-lg-12">
                         <div class="copyright-text">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                         <div class="payment-pic">
