--- a/BodyCareProducts/src/main/webapp/register.html
+++ b/BodyCareProducts/src/main/webapp/register.html
@@ -11,6 +11,13 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700%7CMartel:400,700" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -190,6 +197,7 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
+    <!--
     <div class="breacrumb-section">
         <div class="container">
             <div class="row">
@@ -201,36 +209,61 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Breadcrumb Form Section Begin -->
 
     <!-- Register Section Begin -->
-    <div class="register-login-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 offset-lg-3">
-                    <div class="register-form">
-                        <h2>Register</h2>
-                        <form action="#">
-                            <div class="group-input">
-                                <label for="username">Username or email address *</label>
-                                <input type="text" id="username">
-                            </div>
-                            <div class="group-input">
-                                <label for="pass">Password *</label>
-                                <input type="text" id="pass">
-                            </div>
-                            <div class="group-input">
-                                <label for="con-pass">Confirm Password *</label>
-                                <input type="text" id="con-pass">
-                            </div>
-                            <button type="submit" class="site-btn register-btn">REGISTER</button>
-                        </form>
-                        <div class="switch-login">
-                            <a href="./login.html" class="or-login">Or Login</a>
-                        </div>
-                    </div>
+    <div class="container-fluid pageBody ">
+        <div class="register-login-section spad">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 offset-lg-3">
+                        <div class="card px-3 py-3"
+                            style="color:white;width: 35rem;border-radius: 15px;background-color: #ffffffe0;">
+                            <div class="card-body">
+                                <div class="register-form">
+                                    <h2>Register</h2>
+                                    <form action="#" class="row g-3">
+                                        <div class="col-md-6">
+                                        <div class="group-input ">
+                                            <label for="username">Username</label>
+                                            <input type="text" id="username" class="loginInputs" srequired>
+                                        </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                        <div class="group-input ">
+                                            <label for="email">email</label>
+                                            <input type="email" id="email" class="loginInputs"  required>
+                                        </div>
+                                    </div>
+                                        <div class="group-input loginInputs">
+                                            <label for="pass">Password *</label>
+                                            <input type="text" id="pass" class="loginInputs"  required>
+                                        </div>
+                                        <div class="group-input loginInputs">
+                                            <label for="con-pass">Confirm Password *</label>
+                                            <input type="text" id="con-pass" class="loginInputs"  required>
+                                        </div>
+
+                                        <div class="group-input loginInputs">
+                                            <label for="birthday">Birthday</label>
+                                            <input type="date" id="birthday" class="loginInputs"  required>
+                                        </div>
+                                        <div class="group-input loginInputs">
+                                            <label for="job">Job</label>
+                                            <input type="text" id="job" class="loginInputs" required>
+                                        </div>
+
+                                        <button type="submit" class="site-btn register-btn">REGISTER</button>
+                                    </form>
+                                    <div class="switch-login">
+                                        <a href="./login.html" class="or-login">Or Login</a>
+                                    </div>
+                                </div>
                 </div>
+            </div>
+        </div>
+    </div>
             </div>
         </div>
     </div>
