update footer navbar in progress

--- a/BodyCareProducts/src/main/webapp/login.html
+++ b/BodyCareProducts/src/main/webapp/login.html
@@ -14,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700%7CMartel:400,700" rel="stylesheet">
@@ -39,35 +40,35 @@
 
     <!-- Header Section Begin -->
 
-        <div class="container-fluid" style="background-color: #2B394A;">
-            <div class="inner-header" style="padding: 15px;">
-                <div class="row">
-                    <div class="col-lg-2 col-md-2">
-                        <div class="logo">
-                            <a href="./index.html">
-                                <!-- <img src="img/logo.png" alt=""> -->
+    <div class="container-fluid py-3" style="background-color: #2B394A;">
+        <div class="inner-header " style="padding: 15px;">
+            <div class="row">
+                <div class="col-lg-2 col-md-2">
+                    <div class="logo">
+                        <a href="./index.html">
+                            <!-- <img src="img/logo.png" alt=""> -->
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-7 col-lg-7">
+                    <div class="advanced-search" style="border: none;">
+                        <form action="#" class="input-group">
+                            <input type="text" placeholder="What do you need?">
+                            <button type="button"><i class="ti-search"></i></button>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 text-right col-lg-3">
+                    <ul class="nav-right">
+                        <li class="heart-icon"><a href="#">
+                                <i class="icon_heart_alt"></i>
+                                <span>1</span>
                             </a>
-                        </div>
-                    </div>
+                        </li>
 
-                    <div class="col-lg-7 col-lg-7">
-                        <div class="advanced-search" style="border: none;">
-                            <form action="#" class="input-group">
-                                <input type="text" placeholder="What do you need?">
-                                <button type="button"><i class="ti-search"></i></button>
-                            </form>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 text-right col-lg-3">
-                        <ul class="nav-right">
-                            <li class="heart-icon"><a href="#">
-                                    <i class="icon_heart_alt"></i>
-                                    <span>1</span>
-                                </a>
-                            </li>
-
-                            <li class="cart-icon"><a href="#">
+                        <li class="cart-icon"><a href="#">
                                 <i class="icon_bag_alt"></i>
                                 <span>3</span>
                             </a>
@@ -114,61 +115,60 @@
                         </li>
                         <li class="cart-price">$150.00</li>
                     </ul>
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="nav-item ">
-            <div class="container " >
-                <div class="nav-depart">
-                    <div class="depart-btn">
-                        <i class="ti-menu"></i>
-                        <span>All departments</span>
-                        <ul class="depart-hover">
-                            <li class="active"><a href="#">Women’s Clothing</a></li>
-                            <li><a href="#">Men’s Clothing</a></li>
-                            <li><a href="#">Underwear</a></li>
-                            <li><a href="#">Kid's Clothing</a></li>
-                            <li><a href="#">Brand Fashion</a></li>
-                            <li><a href="#">Accessories/Shoes</a></li>
-                            <li><a href="#">Luxury Brands</a></li>
-                            <li><a href="#">Brand Outdoor Apparel</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <nav class="nav-menu mobile-menu">
-                    <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="#">Collection</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Men's</a></li>
-                                <li><a href="#">Women's</a></li>
-                                <li><a href="#">Kid's</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
-                        <li><a href="#">Pages</a>
-                            <ul class="dropdown">
-                                <li><a href="./blog-details.html">Blog Details</a></li>
-                                <li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                                <li><a href="./check-out.html">Checkout</a></li>
-                                <li><a href="./faq.html">Faq</a></li>
-                                <li><a href="./register.html">Register</a></li>
-                                <li><a href="./login.html">Login</a></li>
-                            </ul>
-                        </li>
+    </div>
+    <div class="nav-item ">
+        <div class="container ">
+            <div class="nav-depart">
+                <div class="depart-btn">
+                    <i class="ti-menu"></i>
+                    <span>All departments</span>
+                    <ul class="depart-hover">
+                        <li class="active"><a href="#">Women’s Clothing</a></li>
+                        <li><a href="#">Men’s Clothing</a></li>
+                        <li><a href="#">Underwear</a></li>
+                        <li><a href="#">Kid's Clothing</a></li>
+                        <li><a href="#">Brand Fashion</a></li>
+                        <li><a href="#">Accessories/Shoes</a></li>
+                        <li><a href="#">Luxury Brands</a></li>
+                        <li><a href="#">Brand Outdoor Apparel</a></li>
                     </ul>
-                </nav>
-                <div id="mobile-menu-wrap"></div>
+                </div>
             </div>
+            <nav class="nav-menu mobile-menu">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./shop.html">Shop</a></li>
+                    <li><a href="#">Collection</a>
+                        <ul class="dropdown">
+                            <li><a href="#">Men's</a></li>
+                            <li><a href="#">Women's</a></li>
+                            <li><a href="#">Kid's</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#">Pages</a>
+                        <ul class="dropdown">
+                            <li><a href="./blog-details.html">Blog Details</a></li>
+                            <li><a href="./shopping-cart.html">Shopping Cart</a></li>
+                            <li><a href="./check-out.html">Checkout</a></li>
+                            <li><a href="./faq.html">Faq</a></li>
+                            <li><a href="./register.html">Register</a></li>
+                            <li><a href="./login.html">Login</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <div id="mobile-menu-wrap"></div>
         </div>
+    </div>
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <div class="container-fluid pageBody " >
-    <!--<div class="breacrumb-section">
+        <!--<div class="breacrumb-section">
 
         <div class="container">
             <div class="row">
@@ -181,82 +181,87 @@
             </div>
         </div>
     </div>-->
-    <!-- Breadcrumb Form Section Begin -->
+        <!-- Breadcrumb Form Section Begin -->
 
-    <!-- Register Section Begin -->
-    <div class="register-login-section spad">
-        <div class="container"  >
-            <div class="row">
-                <div class="col-lg-6 offset-lg-3">
-                    <div class="card px-3 py-3"
-                        style="color:white;width: 35rem;border-radius: 15px;background-color: #ffffffe0;">
-                        <div class="card-body">
-                            <div class="login-form">
-                                <h2>Login</h2>
-                                <form action="#">
-                                    <div class="group-input">
-                                        <label for="username">Username or email address *</label>
-                                        <input type="text" id="username" class="loginInputs">
-                                    </div>
-                                    <div class="group-input">
-                                        <label for="pass">Password *</label>
-                                        <input type="text" id="pass" class="loginInputs">
-                                    </div>
-                                    <div class="group-input gi-check">
-                                        <div class="gi-more">
-                                            <label for="save-pass">
-                                                Save Password
-                                                <input type="checkbox" id="save-pass">
-                                                <span class="checkmark"></span>
-                                            </label>
-                                            <a href="#" class="forget-pass">Forget your Password</a>
+        <!-- Register Section Begin -->
+        <div class="container-fluid pageBody ">
+            <div class="register-login-section spad">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 offset-lg-3">
+                            <div class="card px-3 py-3"
+                                style="color:white;width: 35rem;border-radius: 15px;background-color: #ffffffe0;">
+                                <div class="card-body">
+                                    <div class="login-form">
+                                        <h2>Login</h2>
+                                        <form action="#">
+                                            <div class="group-input">
+                                                <label for="username">Username or email address *</label>
+                                                <input type="text" id="username" class="loginInputs">
+                                            </div>
+                                            <div class="group-input">
+                                                <label for="pass">Password *</label>
+                                                <input type="text" id="pass" class="loginInputs">
+                                            </div>
+                                            <div class="group-input gi-check">
+                                                <div class="gi-more">
+                                                    <label for="save-pass">
+                                                        Save Password
+                                                        <input type="checkbox" id="save-pass">
+                                                        <span class="checkmark"></span>
+                                                    </label>
+                                                    <a href="#" class="forget-pass">Forget your Password</a>
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="site-btn login-btn">Sign In</button>
+                                        </form>
+                                        <div class="switch-login">
+                                            <a href="./register.html" class="or-login">Or Create An Account</a>
                                         </div>
                                     </div>
-                                    <button type="submit" class="site-btn login-btn">Sign In</button>
-                                </form>
-                                <div class="switch-login">
-                                    <a href="./register.html" class="or-login">Or Create An Account</a>
                                 </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-        </div>
-    <!-- Register Form Section End -->
+        <!-- Register Form Section End -->
 
-    <!-- Partner Logo Section Begin -->
-    <div class="partner-logo">
-        <div class="container">
-            <div class="logo-carousel owl-carousel">
-                <div class="logo-item">
-                    <div class="tablecell-inner">
-                        <img src="img/logo-carousel/logo-1.png" alt="">
+        <!-- Partner Logo Section Begin -->
+        <div class="partner-logo">
+            <div class="container">
+                <div class="logo-carousel owl-carousel">
+                    <div class="logo-item">
+                        <div class="tablecell-inner">
+                            <img src="img/logo-carousel/logo-1.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="logo-item">
-                    <div class="tablecell-inner">
-                        <img src="img/logo-carousel/logo-2.png" alt="">
+                    <div class="logo-item">
+                        <div class="tablecell-inner">
+                            <img src="img/logo-carousel/logo-2.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="logo-item">
-                    <div class="tablecell-inner">
-                        <img src="img/logo-carousel/logo-3.png" alt="">
+                    <div class="logo-item">
+                        <div class="tablecell-inner">
+                            <img src="img/logo-carousel/logo-3.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="logo-item">
-                    <div class="tablecell-inner">
-                        <img src="img/logo-carousel/logo-4.png" alt="">
+                    <div class="logo-item">
+                        <div class="tablecell-inner">
+                            <img src="img/logo-carousel/logo-4.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="logo-item">
-                    <div class="tablecell-inner">
-                        <img src="img/logo-carousel/logo-5.png" alt="">
+                    <div class="logo-item">
+                        <div class="tablecell-inner">
+                            <img src="img/logo-carousel/logo-5.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Partner Logo Section End -->
 
     <!-- Footer Section Begin -->
@@ -325,7 +330,7 @@
                             <script>document.write(new Date().getFullYear());</script> All rights reserved | This
                             template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
                                 href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                         <div class="payment-pic">
                             <img src="img/payment-method.png" alt="">
