--- a/BodyCareProducts/src/main/webapp/check-out.html
+++ b/BodyCareProducts/src/main/webapp/check-out.html
@@ -177,11 +177,12 @@
     <!-- Breadcrumb Section Begin -->
 
     <!-- Shopping Cart Section Begin -->
+    <div class="container-fluid" style="background-image: url(img/background_img.jpg); background-repeat: no-repeat; background-size: cover;">
     <section class="checkout-section spad">
         <div class="container">
             <form action="#" class="checkout-form">
-                <div class="row">
-                    <div class="col-lg-6">
+                <div class="row" style="justify-content: center;">
+                    <!-- <div class="col-lg-6 px-4 py-4" style="background-color: #f5f5f5;right: 5px;">
                         <div class="checkout-content">
                             <a href="#" class="content-btn">Click Here To Login</a>
                         </div>
@@ -234,20 +235,15 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6">
+                    </div> -->
+                    <div class="col-lg-6 px-5 py-5" style="background-color: #f5f5f5; border-radius: 15px;">
                         <!---
                             <div class="checkout-content">
                                 <input type="text" placeholder="Enter Your Coupon Code">
                             </div>
                         -->
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
                         <div class="place-order">
-                            <h4>Your Order</h4>
+                            <h4> Your Order</h4>
                             <div class="order-total">
                                 <ul class="order-table">
                                     <li>Product <span>Total</span></li>
@@ -283,6 +279,7 @@
             </form>
         </div>
     </section>
+</div>
     <!-- Shopping Cart Section End -->
 
     <!-- Partner Logo Section Begin -->
